--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ h3{
 @media only screen and (max-width:900px){ /* media query */
 
     body{
-        overflow-y: hidden; /* capacidad de desplazarse en la pantalla, hidden no deja desplazarte */
+        overflow-x: hidden; /* capacidad de desplazarse en la pantalla, hidden no deja desplazarte */
     }
 } 
 
