--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     background-image:  linear-gradient(#cfcfcf 1px, transparent 1px), linear-gradient(90deg, #cfcfcf 1px, transparent 1px);
     background-size: 20px 20px;
     margin: 0;
-    padding: 0;
+    padding: 10px;
     min-width: 380px;
 }
 
